manifests-failed/admin-console-operator-2.15.0-SNAPSHOT.3.tgz-manifest.yaml
---
# Source: admin-console-operator/templates/admin_console_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: edp-admin-console
    helm.sh/chart: admin-console-operator-2.15.0-SNAPSHOT.3
    app.kubernetes.io/name: admin-console-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.15.0-SNAPSHOT.3"
    app.kubernetes.io/managed-by: Helm
  name: edp-admin-console
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: edp-admin-console
  sessionAffinity: None
  type: ClusterIP
---
# Source: admin-console-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: admin-console-operator-2.15.0-SNAPSHOT.3
    app.kubernetes.io/name: admin-console-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.15.0-SNAPSHOT.3"
    app.kubernetes.io/managed-by: Helm
  name: admin-console-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: admin-console-operator
  template:
    metadata:
      labels:
        name: admin-console-operator
    spec:
      serviceAccountName: edp-admin-console-operator
      securityContext:
        runAsNonRoot: true
      containers:
        - name: admin-console-operator
          # Replace this with the built image name
          image: "epamedp/admin-console-operator:2.15.0-SNAPSHOT.3"
          imagePullPolicy: "IfNotPresent"
          command:
            - admin-console-operator
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 192Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
# Source: admin-console-operator/templates/deployment/admin_console_deployment_kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: edp-admin-console
    helm.sh/chart: admin-console-operator-2.15.0-SNAPSHOT.3
    app.kubernetes.io/name: admin-console-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.15.0-SNAPSHOT.3"
    app.kubernetes.io/managed-by: Helm
  name: edp-admin-console
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: edp-admin-console
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: edp-admin-console
    spec:
      containers:
        - env:
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
            - name: HOST
              value: "https://edp-admin-console-."
            - name: EDP_ADMIN_CONSOLE_VERSION
              value: "2.15.0-SNAPSHOT"
            - name: EDP_VERSION
              value: "3.3.0-SNAPSHOT"
            - name: AUTH_KEYCLOAK_ENABLED
              value: "false"
            - name: DNS_WILDCARD
              value: ""
            - name: DB_ENABLED
              value: "false"
            - name: PLATFORM_TYPE
              value: "kubernetes"
            - name: VCS_INTEGRATION_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: vcs_integration_enabled
                  name: edp-config
            - name: PROJECT_MASK_URL
              value: "/console/project/{namespace}/overview"
            - name: IMAGE_STREAM_MASK_URL
              value: "/console/project/{namespace}/browse/images/{stream}"
            - name: INTEGRATION_STRATEGIES
              value: Create,Clone,Import
            - name: BUILD_TOOLS
              value: maven
            - name: DEPLOYMENT_SCRIPT
              value: helm-chart
            - name: VERSIONING_TYPES
              value: default,edp
            - name: CI_TOOLS
              value: Jenkins,GitLab CI
            - name: PERF_DATA_SOURCES
              value: Sonar,Jenkins,GitLab
          image: "epamedp/edp-admin-console:2.15.0-SNAPSHOT"
          imagePullPolicy: "IfNotPresent"
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 120
            periodSeconds: 20
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          name: edp-admin-console
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 20
            periodSeconds: 20
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
      serviceAccount: edp-admin-console
      serviceAccountName: edp-admin-console
      terminationGracePeriodSeconds: 30
---
# Source: admin-console-operator/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: edp-admin-console
  labels:
    app: edp-admin-console
    helm.sh/chart: admin-console-operator-2.15.0-SNAPSHOT.3
    app.kubernetes.io/name: admin-console-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.15.0-SNAPSHOT.3"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: edp-admin-console-.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edp-admin-console
                port:
                  number: 8080
